@@ -2,6 +2,9 @@ Revision history for perl distribution Mojolicious-Plugin-PromiseActions
 
 0.08  Not Released
 - Add more tests
+- handles arbitrary thenables (jberger)
+- propagates context correctly (jberger)
+- DTRT in an under (jberger)
 
 0.07 2018-09-24T22:15:52+0200
 
